# file_search

./: Cargo.toml  README.md
batch/ps1/: search_csv.ps1  search_csv_no_expression.ps1  search_line.ps1  search_line_error.ps1  search_line_regex.ps1  search_zip.ps1  search_zip_regex.ps1  show_help.ps1
data/: example1.json  example2.json  tb_email.csv  tb_event_channel.csv
examples/ps1/: search_csv.ps1  search_csv_no_expression.ps1  search_csv_no_expression_html.ps1  search_csv_to_html.ps1  search_file_to_html.ps1  search_jar_recursive.ps1  search_jar_recursive_html.ps1  search_json_path_simple.ps1  search_line.ps1  search_line_error.ps1  search_line_regex.ps1  search_line_regex_to_file.ps1  search_pdf_simple.ps1  search_xml_recursive.ps1  search_zip.ps1  search_zip_regex.ps1  show_help.ps1
src/: cli.rs  finders.rs  html_printer.rs  io_ops.rs  json_path_search.rs  main.rs  pdf_search.rs  result_printer.rs
