[package]
name = "file_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.0"
fancy-regex = "0.10.0"
zip = "0.6.2"
colored = "2.0.0"
serde_json = "1.0"
pest = "2.0"
jsonpath-rust = "0.1.6"
lopdf = "0.20.0"
pdf-extract = "0.6.4"
unicode-segmentation = "1.10.0"
